@@ -7,10 +7,10 @@ www.andymatuschak.org/xml-namespaces/sparkle">
         <description>Most recent changes with links to updates.</description> 
         <language>en</language> 
         <item> 
-            <title>Version 0.9.4.1208</title> 
+            <title>Version 0.9.4.1217</title> 
             <description>http://iterm.sourceforge.net/Changelog.html</description> 
-            <pubDate>Fri, 8 Dec 2006 17:59:11 +0000</pubDate> 
-            <enclosure url="http://iterm.sourceforge.net/iTerm-latest-cvs_0.9.4.1208.zip" length="1556380" 
+            <pubDate>Fri, 17 Dec 2006 21:59:11 +0000</pubDate> 
+            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.4.1217.zip" length="1556599" 
 type="application/octet-stream"/> 
         </item> 
     </channel> 
